--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css" />
-<script src="src/leaflet-tilelayer-colorize.js"></script>
-
-<div id="container">
-	<div id="map-default"></div>
-	<div id="map-dark"></div>
-	<div id="map-dark-colorized"></div>
-	<div id="map-colorized"></div>
-</div>
-
-<style> 
- 	body { margin: 0; }
- 	#container { display: flex; flex-wrap: wrap; }
-	#map-default { height: 50vh; width: 50%; }
-	#map-dark { height: 50vh; width: 50%; }
-	#map-dark-colorized { height: 50vh; width: 50%; }
-	#map-colorized { height: 50vh; width: 50%; }
-</style>
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css" />
+		<script src="src/leaflet-tilelayer-colorize.js"></script>
+		<style> 
+		 	body { margin: 0; }
+		 	#container { display: flex; flex-wrap: wrap; }
+			#map-default { height: 50vh; width: 50%; }
+			#map-dark { height: 50vh; width: 50%; }
+			#map-dark-colorized { height: 50vh; width: 50%; }
+			#map-colorized { height: 50vh; width: 50%; }
+		</style>
+	</head>
+	<body>
+	<div id="container">
+		<div id="map-default"></div>
+		<div id="map-dark"></div>
+		<div id="map-dark-colorized"></div>
+		<div id="map-colorized"></div>
+	</div>
+	</body>
+</html>
 <script>
  	var defaultMap = L.map('map-default').setView([51.505, -0.09], 14);
  	var darkMap = L.map('map-dark').setView([51.505, -0.09], 14);
