--- a/Leaflet.TileLayerColorize/index.html
+++ b/Leaflet.TileLayerColorize/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css" />
-		<script src="leaflet-tilelayer-colorize.js"></script>
+		<script src="leaflet-tilelayer-colorize.min.js"></script>
 		<style> 
 		 	body { margin: 0; }
 		 	#container { display: flex; flex-wrap: wrap; }
