--- a/Leaflet.TileLayer.ColorFilter.liveTests/index.html
+++ b/Leaflet.TileLayer.ColorFilter.liveTests/index.html
@@ -4,11 +4,13 @@
 <head>
 	<link rel="stylesheet" href="leaflet134/leaflet.css" />
 	<script src="leaflet134/leaflet-src.js"></script>
+	<script src="leaflet-tilelayer-colorfilter.min.js"></script>
 	<link rel="stylesheet" href="demo.css" />
 </head>
 
 <body>
 	<div id="map"></div>
+	<div id="map-cf"></div>
 </body>
 
 <script src="demo.js"></script>
