--- a/Leaflet.TileLayer.ColorFilter.liveTests/index.html
+++ b/Leaflet.TileLayer.ColorFilter.liveTests/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link rel="stylesheet" href="leaflet134/leaflet.css" />
-	<script src="leaflet134/leaflet-src.js"></script>
+	<script src="leaflet134/leaflet.js"></script>
 	<script src="leaflet-tilelayer-colorfilter.min.js"></script>
 	<link rel="stylesheet" href="demo.css" />
 </head>
