--- a/Leaflet.TileLayer.ColorFilter.updateFilter/index.html
+++ b/Leaflet.TileLayer.ColorFilter.updateFilter/index.html
@@ -65,6 +65,18 @@
 			<br/>
 			<input type="range" min="0" max="100" value="0" id="sepia-slider">
 		</div>
+		<div id="reset-settings-container">
+			<input id="reset-settings" type="submit" value="Reset Settings" onclick="resetSettings()">
+		</div>
+	</div>
+	<div id="filter-settings">let myFilter = ['blur:0px','grayscale:0%','invert:0%','bright:100%','contrast:100%','hue:0deg','opacity:100%','saturate:100%','sepia:0%'];</div>
+	<div id="basemap-url">
+		<div> Basemap URL: (
+			<a href="https://leaflet-extras.github.io/leaflet-providers/preview/" target="_blank">Pick one!</a>) </div>
+		<div>
+			<input id="url-input" type="text" name="url" value="https://maps.wikimedia.org/osm-intl/{z}/{x}/{y}.png">
+			<input id="url-action" type="submit" value="Go" onclick="updateBasemapUrl()">
+		</div>
 	</div>
 </body>
 
