--- a/Leaflet.TileLayer.ColorFilter.updateFilter/index.html
+++ b/Leaflet.TileLayer.ColorFilter.updateFilter/index.html
@@ -71,8 +71,8 @@
 	</div>
 	<div id="filter-settings">let myFilter = ['blur:0px','grayscale:0%','invert:0%','bright:100%','contrast:100%','hue:0deg','opacity:100%','saturate:100%','sepia:0%'];</div>
 	<div id="basemap-url">
-		<div> Basemap URL: (
-			<a href="https://leaflet-extras.github.io/leaflet-providers/preview/" target="_blank">Pick one!</a>) </div>
+		<div> Basemap URL: 
+			<a href="https://leaflet-extras.github.io/leaflet-providers/preview/" target="_blank">(Pick one!</a>) </div>
 		<div>
 			<input id="url-input" type="text" name="url" value="https://maps.wikimedia.org/osm-intl/{z}/{x}/{y}.png">
 			<input id="url-action" type="submit" value="Go" onclick="updateBasemapUrl()">
